--- a/HMW5.css
+++ b/HMW5.css
@@ -2,3 +2,26 @@
     width: 200px;
     height: 150px
 }
+
+.firstText {
+    display: flex;
+    justify-content: space-around;
+    background-color: lightsteelblue;
+}
+#para1 {
+    width: 200px;
+}
+#btn1 {
+    width: 200px;
+    background-color: red;
+    color: antiquewhite;
+    font-family: fantasy;
+    font-size: 20;
+}
+#btn2 {
+    width: 200px;
+    background-color: red;
+    color: antiquewhite;
+    font-family: fantasy;
+    font-size: 20;
+}
