--- a/HMW5.css
+++ b/HMW5.css
@@ -11,6 +11,13 @@
 #para1 {
     width: 200px;
 }
+
+#pizza {
+
+    width: 250px;
+
+}
+
 #btn1 {
     width: 200px;
     background-color: red;
@@ -18,6 +25,7 @@
     font-family: Georgia;
     font-size: 20;
 }
+
 #btn2 {
     width: 200px;
     background-color: red;
